Add let's encrypt support to nginx

--- a/nginx_proxy/Dockerfile
+++ b/nginx_proxy/Dockerfile
@@ -5,12 +5,14 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache tzdata jq nginx libressl
+RUN apk add --no-cache tzdata jq nginx libressl \
+  && curl -s -o /usr/bin/dehydrated https://raw.githubusercontent.com/lukas2511/dehydrated/v0.4.0/dehydrated \
+  && chmod a+x /usr/bin/dehydrated
 
 # Copy data
-COPY run.sh /
+COPY *.sh /
 COPY nginx.conf /etc/
 
-RUN chmod a+x /run.sh
+RUN chmod a+x /*.sh
 
 CMD [ "/run.sh" ]
