Adding support for deployment_key for git_pull addon (#196)
* adding support for deployment_key for git_pull addon

* safer usage of bash vars

* fixed $HOME vs ~ typo

* more specific schema for deployment_key_protocol

* adding ssh-client to git pull addon image

* only ...-client package needed

* Pump version to 2.0

--- a/git_pull/Dockerfile
+++ b/git_pull/Dockerfile
@@ -5,7 +5,7 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache jq curl git
+RUN apk add --no-cache jq curl git openssh-client
 
 # Copy data
 COPY run.sh /
