--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Git pull",
-  "version": "1.1",
+  "version": "2.0",
   "slug": "git_pull",
   "description": "Simple git pull to update the local configuration",
   "url": "https://home-assistant.io/addons/git_pull/",
@@ -9,6 +9,8 @@
   "hassio_api": true,
   "map": ["config:rw"],
   "options": {
+    "deployment_key": [],
+    "deployment_key_protocol": "rsa",
     "repository": null,
     "auto_restart": false,
     "repeat": {
@@ -17,6 +19,8 @@
     }
   },
   "schema": {
+    "deployment_key": ["str"],
+    "deployment_key_protocol": "match(rsa|dsa|ecdsa|ed25519|rsa)",
     "repository": "url",
     "auto_restart": "bool",
     "repeat": {
