--- a/telldus_core/config.json
+++ b/telldus_core/config.json
@@ -2,7 +2,7 @@
   "name": "Telldus Core",
   "version": "0.1",
   "slug": "telldus_core",
-  "description": "Tellstick Core daemon and tools required to communicate with Tellstick duo",
+  "description": "Telldus tellstick daemon and tools.",
   "startup": "services",
   "boot": "auto",
   "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
