Allow git:// URLS too
Requiring url in repo only allows for https addresses

--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -21,7 +21,7 @@
   "schema": {
     "deployment_key": ["str"],
     "deployment_key_protocol": "match(rsa|dsa|ecdsa|ed25519|rsa)",
-    "repository": "url",
+    "repository": "str",
     "auto_restart": "bool",
     "repeat": {
       "active": "bool",
