--- a/telldus_core/config.json
+++ b/telldus_core/config.json
@@ -8,5 +8,17 @@
   "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
   "map": ["config:rw"],
   "options": {},
-  "schema": {}
+  "schema": {
+    "devices": [
+      {
+        "id": "int(1,)",
+        "name": "str",
+        "protocol": "match(arctech|brateck|everflourish|fuhaote|hasta|ikea|kangtai|risingsun|sartano|silvanchip|upm|waveman|x10|yidong)",
+        "model": "match(codeswitch|bell|selflearning-switch|selflearning-dimmer|selflearning|ecosavers|kp100)?",
+        "house": "str?",
+        "code": "str?",
+        "unit": "str?"
+      }
+    ]
+  }
 }
