--- a/tellstick/config.json
+++ b/tellstick/config.json
@@ -9,7 +9,7 @@
   "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
   "map": ["config:rw"],
   "options": {
-    devices: []
+    "devices": []
   },
   "schema": {
     "devices": [
