--- a/tellstick/Dockerfile
+++ b/tellstick/Dockerfile
@@ -7,7 +7,7 @@ ENV LANG C.UTF-8
 RUN apk add --no-cache \
         confuse libftdi1 libstdc++ jq socat \
     && apk add --no-cache --virtual .build-dependencies \
-        cmake build-base gcc doxygen confuse-dev argp-standalone libftdi1-dev git \
+        cmake build-base gcc doxygen confuse-dev argp-standalone libftdi1-dev git argp-standalone \
     && ln -s /usr/include/libftdi1/ftdi.h /usr/include/ftdi.h \
     && mkdir -p /usr/src \
     && cd /usr/src \
