--- a/tellstick/config.json
+++ b/tellstick/config.json
@@ -2,7 +2,7 @@
   "name": "TellStick",
   "version": "0.2",
   "slug": "tellstick",
-  "description": "Telldus TellStick and TellStick Duo service.",
+  "description": "TellStick and TellStick Duo service.",
   "url": "https://home-assistant.io/addons/tellstick/",
   "startup": "services",
   "stdin": "true",
