TellStick - Added stdin, clarified desc. and config (#206)
* Added event listener

* Updated version

* Add TellStick Logo

* Update run.sh

* Update config.json

* Update config.json

* Update config.json

* Update config.json

* Variable handling..

* Update run.sh

--- a/tellstick/config.json
+++ b/tellstick/config.json
@@ -1,10 +1,11 @@
 {
-  "name": "Tellstick",
-  "version": "0.1",
+  "name": "TellStick",
+  "version": "0.2",
   "slug": "tellstick",
-  "description": "Telldus Tellstick daemon and tools.",
+  "description": "TellStick and TellStick Duo service.",
   "url": "https://home-assistant.io/addons/tellstick/",
   "startup": "services",
+  "stdin": "true",
   "boot": "auto",
   "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
   "options": {
@@ -16,6 +17,14 @@
       "model": "selflearning-switch",
       "house": "A",
       "unit": "1"
+     },
+     {
+      "id": 2,
+      "name": "Example device two",
+      "protocol": "everflourish",
+      "model": "selflearning-switch",
+      "house": "A",
+      "unit": "2"
      }
     ]
   },
