--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -17,8 +17,12 @@ RUN curl -L -o /tmp/occu.tar.gz https://github.com/eq-3/occu/archive/$OCCU_VERSI
     && cd occu-$OCCU_VERSION \
     && if "$BUILD_ARCH" == "armhf"; then cd arm-gnueabihf; else cd X86_32_Debian_Wheezy; fi \
     && install.sh \
+    && ln -s /opt/hm/etc/config /etc/config \
     && cp -r firmare /opt/hm/ \
     && rm -rf occu-$OCCU_VERSION
+
+# Update config files
+COPY rfd.conf /etc/config
 
 # Setup start script
 COPY run.sh /
