--- a/homematic/rfd.conf
+++ b/homematic/rfd.conf
@@ -12,6 +12,7 @@ Device Files Dir = /data/rfd
 Key File = /data/keys
 Address File = /data/ids
 Firmware Dir = /opt/hm/firmware
+User Firmware Dir = /data/firmware
 Replacemap File = /opt/hm/firmware/rftypes/replaceMap/rfReplaceMap.xml
 
 [Interface 0]
