--- a/homematic/config.json
+++ b/homematic/config.json
@@ -9,6 +9,9 @@
   "boot": "auto",
   "auto_uart": true,
   "gpio": true,
+  "ports": {
+    "2001/tcp": 2001
+  },
   "options": {
     "type": "CCU2",
     "device": "/dev/ttyAMA0"
