--- a/homematic/rfd.conf
+++ b/homematic/rfd.conf
@@ -1,9 +1,9 @@
 # TCP Port for XmlRpc connections
 Listen Port = 2001
 
-Log Destination = Syslog
+Log Destination = None
 Log Identifier = rfd
-Log Level = 1
+Log Level = 5
 
 Persist Keys = 1
 
