--- a/homematic/config.json
+++ b/homematic/config.json
@@ -10,7 +10,8 @@
   "auto_uart": true,
   "gpio": true,
   "ports": {
-    "2001/tcp": 2001
+    "2001/tcp": 2001,
+    "80/tcp": 8280
   },
   "options": {
     "type": "CCU2",
