--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -18,11 +18,12 @@ RUN curl -L -o occu.tar.gz https://github.com/eq-3/occu/archive/${OCCU_VERSION}.
     && rm -f occu.tar.gz \
     && cd occu-${OCCU_VERSION} \
     && if [ "$BUILD_ARCH" == "armhf" ]; then cd arm-gnueabihf; else cd X86_32_Debian_Wheezy; fi \
-    && ./install.sh \
+    && mkdir -p /opt/hm \
+    && cp -R packages-eQ-3/RFD/* /opt/hm \
+    && cp -R packages-eQ-3/LinuxBasis/* /opt/hm \
+    && cp -R packages-eQ-3/HS485D/* /opt/hm \
     && ln -s /opt/hm/etc/config /etc/config \
     && cp -r ../firmware /opt/hm/ \
-    && cp -R ../WebUI/* /opt/hm \
-    && ln -s /opt/hm/www /www \
     && rm -rf /usr/src/occu-${OCCU_VERSION}
 ENV HM_HOME=/opt/hm LD_LIBRARY_PATH=/opt/hm/lib:${LD_LIBRARY_PATH}
 
