--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -2,7 +2,8 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Install packages
-RUN apt-get install -y \
+RUN apt-get update \
+    && apt-get install -y \
         curl \
         jq \
         libusb-1.0 \
