--- a/homematic/config.json
+++ b/homematic/config.json
@@ -1,6 +1,6 @@
 {
   "name": "HomeMatic OCCU",
-  "version": "2.29.22-1-p1",
+  "version": "2.29.22-1-p2",
   "slug": "homematic",
   "description": "HomeMatic central based on OCCU",
   "url": "https://home-assistant.io/addons/homematic/",
@@ -10,7 +10,8 @@
   "auto_uart": true,
   "gpio": true,
   "ports": {
-    "2001/tcp": 2001
+    "2001/tcp": 2001,
+    "2000/tcp": 2000,
   },
   "options": {
     "rf_enable": true,
