--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ addons:
 before_install:
   - shopt -s globstar
   - docker pull koalaman/shellcheck
+  - docker pull stedolan/jq
 
 script:
  - docker run -v $(pwd):/mnt koalaman/shellcheck **/*.sh
+ - cat -- **/*.json | docker run -v $(pwd):/mnt stedolan/jq '.'
 
 matrix:
   fast_finish: true
