--- a/tellstick/config.json
+++ b/tellstick/config.json
@@ -4,7 +4,7 @@
   "slug": "tellstick",
   "description": "TellStick and TellStick Duo service.",
   "url": "https://home-assistant.io/addons/tellstick/",
-  "startup": "services",
+  "startup": "system",
   "stdin": true,
   "boot": "auto",
   "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
