--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -7,11 +7,17 @@ ENV LANG C.UTF-8
 # Setup base
 RUN apk add --no-cache jq openssh vim curl nano git mosquitto-clients tmux
 
+# Hass.io CLI
+ARG BUILD_ARCH
+ARG CLI_VERSION
+RUN apk add --no-cache curl \
+    && curl -Lso /usr/bin/hassio https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH}
+    && chmod a+x /usr/bin/hassio
+
 # Copy data
 COPY run.sh /
 COPY motd /etc/
-COPY hassio /usr/bin/
 
-RUN chmod a+x /run.sh /usr/bin/hassio
+RUN chmod a+x /run.sh
 
 CMD [ "/run.sh" ]
