--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -5,7 +5,12 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache jq openssh vim curl nano git mosquitto-clients tmux
+RUN apk add --no-cache \
+    jq openssh vim curl nano git mosquitto-clients tmux \
+    bash-completion
+
+# Replace bash as default shell
+RUN sed -i "s/ash/bash/" /etc/passwd
 
 # Hass.io CLI
 ARG BUILD_ARCH
