--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -16,7 +16,7 @@ RUN sed -i "s/ash/bash/" /etc/passwd
 ARG BUILD_ARCH
 ARG CLI_VERSION
 RUN apk add --no-cache curl \
-    && curl -Lso /usr/bin/hassio https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH}
+    && curl -Lso /usr/bin/hassio https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH} \
     && chmod a+x /usr/bin/hassio
 
 # Copy data
