Add new CLI (#222)
* Add new CLI

* Use bash as default shell

* update cli version

* fix docker file

--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -5,13 +5,24 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache jq openssh vim curl nano git mosquitto-clients tmux
+RUN apk add --no-cache \
+    jq openssh vim curl nano git mosquitto-clients tmux \
+    bash-completion
+
+# Replace bash as default shell
+RUN sed -i "s/ash/bash/" /etc/passwd
+
+# Hass.io CLI
+ARG BUILD_ARCH
+ARG CLI_VERSION
+RUN apk add --no-cache curl \
+    && curl -Lso /usr/bin/hassio https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH} \
+    && chmod a+x /usr/bin/hassio
 
 # Copy data
 COPY run.sh /
 COPY motd /etc/
-COPY hassio /usr/bin/
 
-RUN chmod a+x /run.sh /usr/bin/hassio
+RUN chmod a+x /run.sh
 
 CMD [ "/run.sh" ]
