--- a/git_pull/Dockerfile
+++ b/git_pull/Dockerfile
@@ -7,6 +7,13 @@ ENV LANG C.UTF-8
 # Setup base
 RUN apk add --no-cache jq curl git openssh-client
 
+# Hass.io CLI
+ARG BUILD_ARCH
+ARG CLI_VERSION
+RUN apk add --no-cache curl \
+    && curl -Lso /usr/bin/hassio https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH} \
+    && chmod a+x /usr/bin/hassio
+
 # Copy data
 COPY run.sh /
 RUN chmod a+x /run.sh
