Changing default challenge to http
Let's Encrypt no longer supports TLS-SNI.
https://github.com/home-assistant/home-assistant/issues/11676

--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -12,7 +12,7 @@
    },
   "map": ["ssl:rw"],
   "options": {
-    "challenge": "https",
+    "challenge": "http",
     "email": null,
     "domains": [null],
     "certfile": "fullchain.pem",
