Username and password support for git_pull addon (#217)
* Add user/password support to git pull.

This can be used for private repositories that don't support ssh.
Ex: https://cloud.google.com/source-repositories/docs/

* Remove unnecessary err redirection.

* Bump git_pull version to 3.1

* Update config.json

* Update CHANGELOG.md

* Update CHANGELOG.md

* address commands

--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Git pull",
-  "version": "3.0",
+  "version": "4.0",
   "slug": "git_pull",
   "description": "Simple git pull to update the local configuration",
   "url": "https://home-assistant.io/addons/git_pull/",
@@ -11,6 +11,8 @@
   "options": {
     "deployment_key": [],
     "deployment_key_protocol": "rsa",
+    "deployment_user": "",
+    "deployment_password": "",
     "repository": null,
     "auto_restart": false,
     "repeat": {
@@ -21,6 +23,8 @@
   "schema": {
     "deployment_key": ["str"],
     "deployment_key_protocol": "match(rsa|dsa|ecdsa|ed25519|rsa)",
+    "deployment_user": "str",
+    "deployment_password": "str",
     "repository": "match((?:.+):(\/\/)?(.*?)(\\.git)(\/?|\\#[-\\d\\w._]+?))",
     "auto_restart": "bool",
     "repeat": {
