--- a/homematic/config.json
+++ b/homematic/config.json
@@ -1,6 +1,6 @@
 {
   "name": "HomeMatic OCCU",
-  "version": "2.31.25-p0",
+  "version": "2.31.25-p1",
   "slug": "homematic",
   "description": "HomeMatic central based on OCCU",
   "url": "https://home-assistant.io/addons/homematic/",
@@ -18,7 +18,8 @@
     "rf": [
       {
         "type": "CCU2",
-        "device": "/dev/ttyAMA0"
+        "device": "/dev/ttyAMA0",
+        "reset": false
       }
     ],
     "wired_enable": false,
@@ -35,7 +36,8 @@
     "rf": [
       {
         "type": "match(CCU2)",
-        "device": "match(^/dev/.*$)"
+        "device": "match(^/dev/.*$)",
+        "reset": "bool?"
       }
     ],
     "wired_enable": "bool",
