changed default broker host

--- a/hue_mqtt_bridge/config.json
+++ b/hue_mqtt_bridge/config.json
@@ -8,7 +8,7 @@
   "boot": "auto",
   "options": {
    "broker": {
-     "host": "localhost",
+     "host": "core-mosquitto",
       "username": null,
       "password": null
    },
