--- a/snips/config.json
+++ b/snips/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Snips.AI",
-  "version": "0.6.5-p1",
+  "version": "0.51.14",
   "slug": "snips",
   "description": "Local voice control platform",
   "url": "https://home-assistant.io/addons/snips/",
@@ -14,14 +14,14 @@
   "devices": ["/dev/snd:/dev/snd:rwm"],
   "options": {
     "mqtt_bridge": {
-      "active": false,
+      "active": true,
       "host": "172.17.0.1",
       "port": 1883,
       "user": "",
       "password": ""
     },
-    "mic": "0,0",
-    "speaker": "1,0",
+    "mic": "1,0",
+    "speaker": "0,0",
     "assistant": "assistant.zip"
   },
   "schema": {
@@ -36,5 +36,5 @@
     "speaker": "str",
     "assistant": "str"
   },
-  "image": "homeassistant/{arch}-addon-snips"
+  "image": "tschmidty/{arch}-addon-snips"
 }
