--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -1,6 +1,5 @@
-#ARG BUILD_FROM
-#FROM $BUILD_FROM
-FROM snipsdocker/platform:x86-0.51.14
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
 # Copy data
 COPY run.sh /
