--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -5,9 +5,7 @@ FROM $BUILD_FROM
 COPY run.sh /
 COPY mosquitto.conf /etc/
 COPY asoundrc /root/.asoundrc
-
-ARG ASSISTANT_URL
-ADD $ASSISTANT_URL /assistant-default.zip
+COPY assistant.zip /assistant-default.zip
 
 RUN chmod a+x /run.sh
 
