Snips update to 0.51.14 (#239)
* updated to latest snips

* Updated docker build from args

* Update config.json

* Update CHANGELOG.md

* Update config.json

* Update run.sh

* Moved assistant fetch to Dockerfile

* Corrected Dockerfile

* Moved assistant url to build.json

* join to new version numbering

* Jump back

* Update build.json

* Update build.json

* change order

* Update Dockerfile

* Update config.json

* Added assistant.zip

--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -5,6 +5,7 @@ FROM $BUILD_FROM
 COPY run.sh /
 COPY mosquitto.conf /etc/
 COPY asoundrc /root/.asoundrc
+COPY assistant.zip /assistant-default.zip
 
 RUN chmod a+x /run.sh
 
