--- a/duckdns/Dockerfile
+++ b/duckdns/Dockerfile
@@ -6,7 +6,7 @@ ENV LANG C.UTF-8
 
 # Setup base
 RUN apk add --no-cache jq curl libressl \
-  && curl -s -o /usr/bin/dehydrated https://raw.githubusercontent.com/lukas2511/dehydrated/v0.4.0/dehydrated \
+  && curl -s -o /usr/bin/dehydrated https://raw.githubusercontent.com/lukas2511/dehydrated/master/dehydrated \
   && chmod a+x /usr/bin/dehydrated
 
 # Copy data
