--- a/duckdns/config.json
+++ b/duckdns/config.json
@@ -2,7 +2,7 @@
   "name": "Duck DNS",
   "version": "1.1",
   "slug": "duckdns",
-  "description": "Free Dynamic DNS (DynDNS or DDNS) service with Let's Encrypt support",
+  "description": "Free Dynamic DNS (DynDNS or DDNS) service with Lets Encrypt support",
   "url": "https://home-assistant.io/addons/duckdns/",
   "startup": "services",
   "boot": "auto",
