nginx_proxy: Allow customization with included config files from /share
Provides a way to add additional configuration to the default, for
example proxy_pass locations before the default root location, as well
as additional complete server configs.

--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -48,6 +48,8 @@ http {
 
         proxy_buffering off;
 
+        #include /share/nginx_proxy_default*.conf;
+
         location / {
             proxy_pass http://homeassistant:8123;
             proxy_set_header Host $host;
@@ -58,4 +60,6 @@ http {
             proxy_set_header Connection $connection_upgrade;
         }
     }
+
+    #include /share/nginx_proxy/*.conf;
 }
