--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -1,6 +1,6 @@
 {
   "name": "NGINX Home Assistant SSL proxy",
-  "version": "0.7",
+  "version": "1.0",
   "slug": "nginx_proxy",
   "description": "An SSL/TLS proxy",
   "url": "https://home-assistant.io/addons/nginx_proxy/",
@@ -10,16 +10,26 @@
     "80/tcp": 80,
     "443/tcp": 443
    },
-  "map": ["ssl"],
+  "map": ["ssl", "share"],
   "options": {
     "domain": null,
     "certfile": "fullchain.pem",
-    "keyfile": "privkey.pem"
+    "keyfile": "privkey.pem",
+    "customize": {
+      "active": false,
+      "default": "nginx_proxy_default*.conf",
+      "servers": "nginx_proxy/*.conf"
+    }
   },
   "schema": {
     "domain": "str",
     "certfile": "str",
-    "keyfile": "str"
+    "keyfile": "str",
+    "customize": {
+      "active": "bool",
+      "default": "str",
+      "servers": "str"
+    }
   },
   "image": "homeassistant/{arch}-addon-nginx_proxy"
 }
