nginx_proxy: Make HSTS configurable and optional
Unconditional HSTS breaks unencrypted connections to non-standard HTTP
ports on the same hostname. These ports be e.g. mapped outside of
hassio/nginx, and this can not be always circumvented by proxying them
beind nginx, because not all services behave properly behind a reverse
proxy.

Additionally, the unconditional HSTS includeSubDomains setting
hardcodes assumptions about subdomains that hassio does not
necessarily deal with at all.

--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -15,6 +15,7 @@
     "domain": null,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
+    "hsts": "max-age=31536000; includeSubDomains",
     "customize": {
       "active": false,
       "default": "nginx_proxy_default*.conf",
@@ -25,6 +26,7 @@
     "domain": "str",
     "certfile": "str",
     "keyfile": "str",
+    "hsts": "str",
     "customize": {
       "active": "bool",
       "default": "str",
