--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -39,7 +39,7 @@ http {
         ssl_dhparam /data/dhparams.pem;
 
         listen [::]:443 http2;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+        %%HSTS%%
         ssl on;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
