--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -1,6 +1,6 @@
 {
   "name": "NGINX Home Assistant SSL proxy",
-  "version": "1.0",
+  "version": "1.1",
   "slug": "nginx_proxy",
   "description": "An SSL/TLS proxy",
   "url": "https://home-assistant.io/addons/nginx_proxy/",
@@ -15,6 +15,7 @@
     "domain": null,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
+    "hsts": "max-age=31536000; includeSubDomains",
     "customize": {
       "active": false,
       "default": "nginx_proxy_default*.conf",
@@ -25,6 +26,7 @@
     "domain": "str",
     "certfile": "str",
     "keyfile": "str",
+    "hsts": "str",
     "customize": {
       "active": "bool",
       "default": "str",
