--- a/configurator/config.json
+++ b/configurator/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Configurator",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "slug": "configurator",
   "description": "Browser-based configuration file editor for Home Assistant.",
   "url": "https://home-assistant.io/addons/configurator",
@@ -35,7 +35,8 @@
     "banlimit": "int",
     "ignore_pattern": ["str"],
     "dirsfirst": "bool",
-    "sesame": "str?"
+    "sesame": "str?",
+    "verify_hostname": "str?"
   },
   "image": "homeassistant/{arch}-addon-configurator"
 }
