Add support for longer domain names in nginx_proxy
Fixes #243

--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -10,6 +10,7 @@ http {
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ''      close;
+    server_names_hash_bucket_size 64;
     }
 
     server {
