Add support for longer domain names in nginx_proxy (#278)
* Add support for longer domain names in nginx_proxy

Fixes #243

* Update nginx.conf

* update changelog

* bump nginx_proxy to version 1.2

--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -11,6 +11,8 @@ http {
         default upgrade;
         ''      close;
     }
+    
+    server_names_hash_bucket_size 64;
 
     server {
         server_name _;
