--- a/snips/config.json
+++ b/snips/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Snips.AI",
-  "version": "2.1-7",
+  "version": "2.1",
   "slug": "snips",
   "description": "Local voice control platform",
   "url": "https://home-assistant.io/addons/snips/",
@@ -40,5 +40,5 @@
     "tts_platform": "str"
 
   },
-  "image": "tschmidty/{arch}-addon-snips"
+  "image": "homeassistant/{arch}-addon-snips"
 }
