Remove binaries and install from pkg

--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -4,11 +4,12 @@ FROM $BUILD_FROM
 # Copy data
 COPY run.sh /
 COPY mosquitto.conf /etc/
-COPY mpg123* /usr/bin/
 COPY customtts.sh /usr/bin
 COPY assistant_* /
 
 RUN chmod a+x /run.sh
 RUN chmod a+x /usr/bin/customtts.sh
+RUN echo nameserver 1.1.1.1 > /etc/resolv.conf; apt-get update;\
+ apt-get install -y mpg123; apt-get clean all
 
 ENTRYPOINT [ "/run.sh" ]
