--- a/snips/config.json
+++ b/snips/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Snips.AI",
-  "version": "2.0",
+  "version": "3.0",
   "slug": "snips",
   "description": "Local voice control platform",
   "url": "https://home-assistant.io/addons/snips/",
@@ -11,7 +11,9 @@
     "1883/tcp": 9898
   },
   "map": ["share"],
+  "tmpfs": "size=10m",
   "audio": true,
+  "homeassistant_api": true,
   "options": {
     "mqtt_bridge": {
       "active": true,
@@ -20,7 +22,12 @@
       "user": "",
       "password": ""
     },
-    "assistant": "assistant.zip"
+    "assistant": "assistant.zip",
+    "language": "en",
+    "custom_tts": {
+      "active": false,
+      "platform": "amazon_polly"
+    }
   },
   "schema": {
     "mqtt_bridge": {
@@ -30,7 +37,12 @@
       "user": "str",
       "password": "str"
     },
-    "assistant": "str"
+    "assistant": "str",
+    "language": "match((?:en|de|fr))",
+    "custom_tts": {
+      "active": "bool",
+      "platform": "string"
+    }
   },
   "image": "homeassistant/{arch}-addon-snips"
 }
