--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Google Assistant",
-  "version": "0.0.3-p5",
+  "version": "1.0",
   "slug": "google_assistant",
   "description": "A virtual personal assistant developed by Google",
   "url": "https://home-assistant.io/addons/google_assistant/",
@@ -8,19 +8,15 @@
   "boot": "auto",
   "arch": ["armhf", "amd64"],
   "map": ["share"],
-  "devices": ["/dev/snd:/dev/snd:rwm"],
+  "audio": true,
   "ports": {
     "9324/tcp": 9324
   },
   "webui": "http://[HOST]:[PORT:9324]",
   "options": {
-    "mic": "0,0",
-    "speaker": "1,0",
     "client_secrets": "google_assistant.json"
   },
   "schema": {
-    "mic": "str",
-    "speaker": "str",
     "client_secrets": "str"
   },
   "image": "homeassistant/{arch}-addon-google_assistant"
