--- a/configurator/Dockerfile
+++ b/configurator/Dockerfile
@@ -5,10 +5,10 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Setup base
-ARG BUILD_VERSION
+ARG CONFIGURATOR_VERSION
 RUN apk add --no-cache python3 git curl \
   && pip3 install GitPython \
-  && curl -s -o /configurator.py https://raw.githubusercontent.com/danielperna84/hass-configurator/"$(echo "$BUILD_VERSION" | cut -d '-' -f 1)"/configurator.py \
+  && curl -s -o /configurator.py https://raw.githubusercontent.com/danielperna84/hass-configurator/$CONFIGURATOR_VERSION/configurator.py \
   && sed -i "s/GIT = False/GIT = True/g" /configurator.py \
   && apk del curl
 
