--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -14,10 +14,12 @@
   },
   "webui": "http://[HOST]:[PORT:9324]",
   "options": {
-    "client_secrets": "google_assistant.json"
+    "client_secrets": "google_assistant.json",
+    "model_id": null
   },
   "schema": {
-    "client_secrets": "str"
+    "client_secrets": "str",
+    "model_id": "str"
   },
   "image": "homeassistant/{arch}-addon-google_assistant"
 }
