--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Google Assistant",
-  "version": "1.1",
+  "version": "1.2",
   "slug": "google_assistant",
   "description": "A virtual personal assistant developed by Google",
   "url": "https://home-assistant.io/addons/google_assistant/",
@@ -14,10 +14,12 @@
   },
   "webui": "http://[HOST]:[PORT:9324]",
   "options": {
-    "client_secrets": "google_assistant.json"
+    "client_secrets": "google_assistant.json",
+    "model_id": null
   },
   "schema": {
-    "client_secrets": "str"
+    "client_secrets": "str",
+    "model_id": "str"
   },
   "image": "homeassistant/{arch}-addon-google_assistant"
 }
