--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Google Assistant",
-  "version": "1.2",
+  "version": "1.3",
   "slug": "google_assistant",
   "description": "A virtual personal assistant developed by Google",
   "url": "https://home-assistant.io/addons/google_assistant/",
@@ -15,10 +15,12 @@
   "webui": "http://[HOST]:[PORT:9324]",
   "options": {
     "client_secrets": "google_assistant.json",
+    "project_id": null,
     "model_id": null
   },
   "schema": {
     "client_secrets": "str",
+    "project_id": "str",
     "model_id": "str"
   },
   "image": "homeassistant/{arch}-addon-google_assistant"
