--- a/google_assistant/Dockerfile
+++ b/google_assistant/Dockerfile
@@ -5,7 +5,11 @@ FROM $BUILD_FROM
 RUN apt-get update \
     && apt-get install -y \
         jq tzdata python3 python3-dev python3-pip libportaudio2 alsa-utils \
-    && pip3 install google-assistant-library google-auth requests_oauthlib cherrypy \
+    && pip3 install --no-cache-dir \
+        google-assistant-library==1.0.0 \
+        google-assistant-sdk==0.5.0 \
+        google-assistant-grpc=0.2.0 \
+        google-auth requests_oauthlib cherrypy \
     && apt-get remove -y --purge python3-pip python3-dev \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/*
