--- a/google_assistant/Dockerfile
+++ b/google_assistant/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update \
     && pip3 install --no-cache-dir \
         google-assistant-library==1.0.0 \
         google-assistant-sdk==0.5.0 \
-        google-assistant-grpc=0.2.0 \
+        google-assistant-grpc==0.2.0 \
         google-auth requests_oauthlib cherrypy \
     && apt-get remove -y --purge python3-pip python3-dev \
     && apt-get clean -y \
