--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Google Assistant",
+  "name": "Google Assistant SDK",
   "version": "2.0",
   "slug": "google_assistant",
   "description": "A virtual personal assistant developed by Google",
