--- a/bluetooth_bcm43xx/config.json
+++ b/bluetooth_bcm43xx/config.json
@@ -1,12 +1,13 @@
 {
   "name": "Bluetooth BCM43xx",
-  "version": "2.0",
+  "version": "2.1",
   "slug": "bluetooth_bcm43xx",
   "description": "Activate Bluetooth for Broadcom 43xx chips",
   "url": "https://home-assistant.io/addons/bluetooth_bcm43xx/",
   "startup": "initialize",
   "boot": "auto",
-  "host_network": "true",
+  "host_network": true,
+  "devicetree": true,
   "privileged": ["NET_ADMIN"],
   "devices": ["/dev/ttyAMA0:/dev/ttyAMA0:rwm"],
   "options": {},
