--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -9,7 +9,7 @@
   "ports": {
     "1883/tcp": 1883,
     "1884/tcp": 1884,
-    "8883/tcp": 8883
+    "8883/tcp": 8883,
     "8884/tcp": 8884
    },
   "map": ["ssl", "share"],
